--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,11 +1,17 @@
 <resources>
-    <string name="app_name">Изменить языкH3.3.2</string>
+    <string name="app_name">Изменить язык и цвет </string>
     <string name="theText">Добро пожаловать!</string>
     <string name="Change">Изменить язык</string>
+    <string name="OK">Изменить цвет</string>
 
     <string-array name="languages">
         <item>English</item>
         <item>Русский</item>
+    </string-array>
 
+    <string-array name="colors">
+        <item>синий</item>
+        <item>черный</item>
+        <item>зеленый</item>
     </string-array>
 </resources>
