--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -10,6 +10,7 @@
     </string-array>
 
     <string-array name="colors">
+        <item>Не выбран</item>
         <item>синий</item>
         <item>черный</item>
         <item>зеленый</item>
