--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
         <item>Русский</item>
     </string-array>
     <string-array name="colors">
+        <item>No color</item>
         <item>Blue</item>
         <item>Black</item>
         <item>Green </item>
